# morphix

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yaml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
morphix/: Cargo.toml  README.md
morphix-derive/: Cargo.toml
morphix-derive/fixtures/input/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
morphix-derive/fixtures/output/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
morphix-derive/src/: lib.rs  observe.rs
morphix-derive/src/derive/: enum.rs  meta.rs  mod.rs  snapshot.rs  struct.rs
morphix-derive/tests/: deref.rs  enum.rs  observe.rs  struct.rs
morphix-test-utils/: Cargo.toml
morphix-test-utils/src/: lib.rs
morphix/src/: adapter.rs  batch.rs  change.rs  delta.rs  error.rs  helper.rs  lib.rs  mutation.rs  observe.rs  operation.rs  path.rs
morphix/src/adapter/: json.rs  mod.rs  mutation.rs  observe.rs  yaml.rs
morphix/src/builtin/: general.rs  mod.rs  noop.rs  pointer.rs  shallow.rs  snapshot.rs  unsize.rs
morphix/src/general/: mod.rs  noop.rs  observer.rs  pointer.rs  shallow.rs  snapshot.rs  unsize.rs
morphix/src/helper/: deref.rs  macros.rs  mod.rs  normalized.rs  pointer.rs  quasi.rs  shallow.rs  test.rs  unsigned.rs
morphix/src/impls/: array.rs  atomic.rs  boxed.rs  btree_map.rs  cow.rs  deref.rs  forward.rs  hash_map.rs  index.rs  index_map.rs  mod.rs  newtype.rs  option.rs  range.rs  ref.rs  slice.rs  str.rs  string.rs  tuple.rs  unsize.rs  vec.rs  weak.rs
morphix/src/impls/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  index_map.rs  index_set.rs  mod.rs
morphix/src/impls/ffi/: c_str.rs  mod.rs  os_str.rs  os_string.rs  path.rs  str.rs  string.rs
morphix/src/impls/slices/: array.rs  helper.rs  mod.rs  shallow.rs  slice.rs  str.rs  string.rs  vec.rs  vec_deque.rs
morphix/src/impls/strings/: c_str.rs  mod.rs  os_str.rs  os_string.rs  path.rs  path_buf.rs  shallow.rs  str.rs  string.rs
morphix/src/observe/: general.rs  hash.rs  mod.rs  noop.rs  ops.rs  pointer.rs  raw.rs  ref.rs  shallow.rs  snapshot.rs  string.rs  vec.rs
morphix/tests/: main.rs
morphix_derive/: Cargo.toml  README.md
morphix_derive/fixtures/: input.rs  mod.rs  output.rs
morphix_derive/fixtures/input/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
morphix_derive/fixtures/output/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
morphix_derive/src/: derive_observe.rs  lib.rs  observe.rs  sub.rs
morphix_derive/src/derive/: enum.rs  meta.rs  mod.rs  snapshot.rs  struct.rs
morphix_derive/tests/: deref.rs  enum.rs  observe.rs  struct.rs
umili/: Cargo.toml  README.md
umili/src/: batch.rs  change.rs  delta.rs  error.rs  lib.rs  main.rs  observe.rs
umili/tests/: main.rs
