[package]
name = "umili-derive"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Derive macros for umili"
repository = "https://github.com/shigma/umili"
documentation = "https://docs.rs/umili-derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }

