[package]
name = "morphix"
version = "0.5.5"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Observing and serializing mutations"
repository = "https://github.com/shigma/morphix"
documentation = "https://docs.rs/morphix"

[features]
default = ["derive"]
derive = ["dep:morphix_derive"]
full = ["derive", "json", "yaml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml_ng"]

[dependencies]
morphix_derive = { version = "0.5.5", path = "../morphix_derive", optional = true }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145", optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }

[dev-dependencies]
morphix = { path = ".", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
