[package]
name = "morphix"
version = "0.14.2"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Observing and serializing mutations"
repository = "https://github.com/shigma/morphix"
documentation = "https://docs.rs/morphix"

[features]
append = []
chrono = ["dep:chrono"]
default = ["append", "delete", "derive", "truncate"]
delete = []
derive = ["dep:morphix_derive"]
full = ["append", "delete", "derive", "json", "truncate", "yaml"]
json = ["dep:serde_json"]
truncate = []
uuid = ["dep:uuid"]
yaml = ["dep:serde_yaml_ng"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
morphix_derive = { version = "0.14.1", path = "../morphix_derive", optional = true }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }
uuid = { version = "1", features = ["serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.43" }
morphix = { path = ".", features = ["chrono", "full", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0" }
