[package]
name = "morphix_derive"
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Derive macros for morphix"
repository = "https://github.com/shigma/morphix"
documentation = "https://docs.rs/morphix_derive"

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "visit-mut"] }

[dev-dependencies]
morphix = { path = "../morphix", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
