[package]
name = "morphix_derive"
version = "0.9.1"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Derive macros for morphix"
repository = "https://github.com/shigma/morphix"
documentation = "https://docs.rs/morphix_derive"

[features]
default = []

[lib]
proc-macro = true

[[test]]
name = "input"
path = "fixtures/mod.rs"

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "visit", "visit-mut"] }

[dev-dependencies]
macro_expand = "0.1.2"
morphix = { path = "../morphix", features = ["full"] }
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
trybuild = "1.0.112"
walkdir = "2.5.0"
