[package]
name = "umili"
version = "0.2.2"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Mutate and observe Rust data structures"
repository = "https://github.com/shigma/umili"
documentation = "https://docs.rs/umili"

[features]
append = []
default = ["append", "derive"]
derive = []
full = ["append", "derive"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
umili-derive = { version = "0.2.0", path = "../derive" }

[dev-dependencies]
umili = { path = ".", features = ["full"] }
